--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             height: 93px;
             width: 1px;
             background-color: white;
-            margin: 0 90px;
+            margin: 0 82px;
         }
 
         .vertical-title-skill {
@@ -388,6 +388,11 @@
                 <div class="vertical2">
                     <div class="vertical-title-skill">
                         Sql
+                    </div>
+                </div>
+                <div class="vertical2">
+                    <div class="vertical-title-skill">
+                        PHP
                     </div>
                 </div>
                 <div class="vertical2">
