--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 </div>
             </div>
             <div class="rightSection">
-                <img src="portfolio photo.jpg" alt="">
+                <img src="Vansh Bhatt Photo.jpg" alt="">
             </div>
         </section>
 
